package ciencias.unam.modelado.soldados;

public interface IObservador {

    public void muestraAvance();

    public void muestraReporte();

    public void muestraMovimiento();
}
